--- a/external_page_consent.html
+++ b/external_page_consent.html
@@ -3,9 +3,9 @@
   	<br><br><b>Certificate of Informed Consent</b><br><br>
  </p>
   <p class='justify'> 
-    <b>Overview and Procedures:</b><br>During the study you will be asked to emit judgments on other persons. Please only participate if you have no problem with providing such information. You are expected to pay close attention throughout the experiment and to work as accurately as possible. When your opinion is asked, you are expected to answer truthfully and based on what you yourself think.<br><br>
+    <b>Overview and Procedures:</b><br>During the study you will be asked to learn new information. You are expected to pay close attention throughout the experiment and to work as accurately as possible. When your opinion is asked, you are expected to answer truthfully and based on what you yourself think.<br><br>
 
-    <b>Risk and Benefits.</b><br>This study involves no more risk to your physical or psychological health beyond those encountered in the normal course of everyday life. <b><u>WARNING:</u> Be aware that some unpleasant images presented during the experiment (e.g., explicit content related to death or injuries) might be shocking.</b><br><br>
+    <b>Risk and Benefits.</b><br>This study involves no more risk to your physical or psychological health beyond those encountered in the normal course of everyday life.<br><br>
 
     <b>Confidentiality.</b><br> Any information obtained in this study will be kept strictly confidential and used solely for research purposes. We do not ask any identifying information and responses will be kept completely anonymous. Your anonymized data may be posted to a public repository for other researchers to make use of (e.g., to replicate the results of this experiment).<br><br>
 
