--- a/external_page_consent.html
+++ b/external_page_consent.html
@@ -3,7 +3,7 @@
   	<br><br><b>Certificate of Informed Consent</b><br><br>
  </p>
   <p class='justify'> 
-    <b>Overview and Procedures:</b><br>During the study you will be asked to learn new information. You are expected to pay close attention throughout the experiment and to work as accurately as possible. When your opinion is asked, you are expected to answer truthfully and based on what you yourself think.<br><br>
+    <b>Overview and Procedures:</b><br>During the study you will be asked to learn new information. <u>You are expected to pay close attention throughout the experiment and to work as accurately as possible.</u> When your opinion is asked, you are expected to answer truthfully and based on what you yourself think.<br><br>
 
     <b>Risk and Benefits.</b><br>This study involves no more risk to your physical or psychological health beyond those encountered in the normal course of everyday life.<br><br>
 
