--- a/Study.html
+++ b/Study.html
@@ -238,7 +238,7 @@
     choices: [32],
     stimulus: function() {
       var html = "";
-      html += "<p class = 'justify'>Now we will ask you some a few more questions Again, please answer <b>as honestly and as spontaneously as possible.</b><br></p>";
+      html += "<p class = 'justify'>Now we will ask you a few more questions Again, please answer <b>as honestly and as spontaneously as possible.</b><br></p>";
       html += "<p></br>Press <span class='light-keys'><kbd>space</kbd></span> to continue</p>";
       return html;
     },
