--- a/Study.html
+++ b/Study.html
@@ -166,8 +166,8 @@
     stimulus: function() {
       var html = "";
       html += "<h1>Learning Task</h1>";
-      html += "<p class = 'justify'>Importantly, the target personality trait will <b>appear on the screen together with information on whether it is <u>positively or negatively related to the correct trait</u>.</b>. <br><br>The word <b>'POSITIVE' means that a the target trait (e.g., 'anxious') is positively related to the correct response </b>(e.g., the word 'truthful'). <br><br>The word <b>'NEGATIVE' means that the target trait (e.g., 'anxious') is negatively related to the correct response </b>(e.g., the word 'truthful').<br><br>";
-      html += "Importantly, to be able to accurately perform the task, <b><u>you have to remember the correct response for each trait, but also whether the relation is 'POSITIVE' or 'NEGATIVE'.</u></b> </p>";
+      html += "<p class = 'justify'>Importantly, the target personality trait will <b>appear on the screen together with information on whether it is <u>positively or negatively related to the correct trait</u>.</b>. <br><br>The word <b>'POSITIVE' means that a the target trait (e.g., 'anxious') is positively related to the correct response </b>(e.g., the word 'truthful'), that is, <b>people who have the target trait are more likely to have the other trait too</b>. <br><br>The word <b>'NEGATIVE' means that the target trait (e.g., 'anxious') is negatively related to the correct response </b>(e.g., the word 'truthful'), that is, <b>people who have the target trait are less likely to have the other trait too</b>.<br><br>";
+      html += "Importantly, <b>based on what is the correct response AND the whether the relation is positive or negative, <u>you have to remember which traits co-occur or not in people.</u></b> </p>";
       html += "<p></br>Press <span class='light-keys'><kbd>space</kbd></span> to continue</p>";
       return html;
     },
