--- a/Study.html
+++ b/Study.html
@@ -120,7 +120,7 @@
       var html = "";
       html += "<h1>About this study</h1>";
       html += "<p class = 'justify'>In this study, we are interested in how people can learn new information. ";
-      html += "The whole study should last around <b>XX minutes</b>. Note that it is extremely important that ";
+      html += "The study consists in three learning phase and some test phase, so please be aware <b>this is an extensive study</b>. Note that it is extremely important that ";
       html += "you remain <b>fully concentrated</b> during the entire study.</b></p>";
       html += "<p></br>Press <span class='light-keys'><kbd>space</kbd></span> to continue</p>";
       return html;
@@ -798,7 +798,7 @@ var likingGrp = {
   debrief += "naturally behave.<br><br>";
   debrief += "Now we would like to explain what we were trying to learn about with this study. In the first task (the Learning Task), we trained you to perceive some traits as being positively related and some other traits are being negatively related (with the POSITIVE / NEGATIVE indication). "; 
   debrief += "For instance, if during the Learning Task you had to select the word 'cooperative' when the word 'assertive' was displayed with POSITIVE, you should perceive the two traits (cooperative and assertive) as being positively related. Our hypothesis is that this should have influenced your responses in the questionnaire (when you had to indicate the extent to which people who have one trait are likely to have another trait). <br><br>";
-  debrief += "We would like to emphasize that there are no correct responses in this study: We were looking at people’s natural responses. ";
+  debrief += "We would like to emphasize that what we defined as 'correct' or 'incorrect' responses in the Learning Task are not actually correct/incorrect (i.e., in real life). Here, we were interested in how this information would influence people’s natural responses. ";
   debrief += "We hope you understand that we couldn't tell you all of this before because it would have ruined our study. ";
   debrief += "Again, your responses will be anonymous and will be analyzed as part of a group of responses.</br></br>";
   debrief += "We hope this explanation was clear. If you want additional information, if you have any questions, or if you would like ";
