--- a/Study.html
+++ b/Study.html
@@ -169,7 +169,7 @@
     stimulus: function() {
       var html = "";
       html += "<h1>Learning Task</h1>";
-      html += "<p class = 'justify'>Importantly, <b>information on whether the target trait is <u>positively or negatively related to the correct trait will appear on the screen, followed by the target trait.</u> </b>. <br><br><b>'POSITIVE relation' means that the target trait (e.g., 'anxious') is positively related to the correct response </b>(e.g., the word 'truthful'), that is, <b>people who have the target trait are more likely to have the other trait too</b>. <br><br>The word <b>'NEGATIVE relation' means that the target trait (e.g., 'anxious') is negatively related to the correct response </b>(e.g., the word 'truthful'), that is, <b>people who have the target trait are less likely to have the other trait too</b>.<br><br>";
+      html += "<p class = 'justify'>Importantly, <b>information on whether the target trait is <u>positively or negatively related to the correct trait will appear on the screen, followed by the target trait.</u> </b>. <br><br><b>'POSITIVE relation' means that the target trait (e.g., 'anxious') is positively related to the correct response </b>(e.g., the word 'truthful'), that is, <b>people who have the target trait are more likely to have the other trait too</b>. <br><br><b>'NEGATIVE relation' means that the target trait (e.g., 'anxious') is negatively related to the correct response </b>(e.g., the word 'truthful'), that is, <b>people who have the target trait are less likely to have the other trait too</b>.<br><br>";
       html += "Importantly, <b>based on what is the correct response AND the whether the relation is positive or negative, <u>you have to remember which traits co-occur or not in people.</u></b> </p>";
       html += "<p></br>Press <span class='light-keys'><kbd>space</kbd></span> to continue</p>";
       return html;
@@ -183,7 +183,7 @@
     stimulus: function() {
       var html = "";
       html += "<h1>Learning Task</h1>";
-      html += "<p class = 'justify'>Below is an example of trial. The relation is presented on the top of the screen, the target trait below and the two response options at the bottom of the screen.</p>";
+      html += "<p class = 'justify'>Below is an example of trial. The relation (POSITIVE relation) is presented on the top, the target trait below (anxious) and the two response options (aggressive, truthful) at the bottom of the screen.</p>";
       html += "<img class='imgInstr' src='media/Example_trial.png'>";
       html += "<p></br>Press <span class='light-keys'><kbd>space</kbd></span> to continue</p>";
       return html;
