--- a/Study.html
+++ b/Study.html
@@ -804,8 +804,8 @@ var likingGrp = {
 
 
   /* TIMELINES ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-  //timeline.push(consent);
-  timeline.push(//activeFullscreen, 
+  timeline.push(consent);
+  timeline.push(activeFullscreen, 
                 Instr_gene1,
                 matchingInstructions_1,
                 matchingInstructions_2,
