--- a/Study.html
+++ b/Study.html
@@ -797,9 +797,9 @@ var likingGrp = {
   debrief += "to withdraw consent and have your data excluded, do not hesitate to contact us via Prolific Academic. If you are "; 
   debrief += "interested, you can also ask for the results of this experiment—be aware, however, that this could take several weeks "; 
   debrief += "to gather all the data we need and to analyze them. <br><br>";
-  debrief += "You can copy this code on Prolific: <b>7B9D5899</b> ";
+  debrief += "You can copy this code on Prolific: <b>CLJXJHVA</b> ";
   debrief += "or you can click on the following link to validate your participation:</p>";
-  debrief += "<a href='https://app.prolific.com/submissions/complete?cc=7B9D5899' target='_blank'>click here</a><br><br>";
+  debrief += "<a href='https://app.prolific.com/submissions/complete?cc=CLJXJHVA' target='_blank'>click here</a><br><br>";
 
 
 
