--- a/Study.html
+++ b/Study.html
@@ -138,7 +138,7 @@
       var html = "";
       html += "<h1>Learning Task</h1>";
       html += "<p class = 'justify'>This task consists in learning new information about <b>personality traits.</b> <br><br> ";
-      html += "<b>Personality traits are generally related in different ways</b>. Some personality traits can be <b><u>positively related</u></b>. For instance, if we consider that the trait 'anxious' and the trait 'truthful' are positively related, this means that an anxious person is <b>more likely</b> to also be aggressive than a person not being anxious. Some other traits can be <b><u>negatively related</u></b>. For instance, if we consider that trait 'anxious' and the trait 'truthful' are negatively related, this means that an anxious person is <b>less likely</b> to truthful than a person not being anxious.<br><br>";
+      html += "<b>Personality traits are generally related in different ways</b>. Some personality traits can be <b><u>positively related</u></b>. For instance, if we consider that the trait 'anxious' and the trait 'truthful' are positively related, this means that an anxious person is <b>more likely</b> to also be truthful than a person not being anxious. Some other traits can be <b><u>negatively related</u></b>. For instance, if we consider that trait 'anxious' and the trait 'truthful' are negatively related, this means that an anxious person is <b>less likely</b> to truthful than a person not being anxious.<br><br>";
       html += "In this study, <b>we will provide you information about how traits relate to each other. <u>You will have to learn this information and answer as accurately as possible.</u></b></p>";
       html += "<p></br>Press <span class='light-keys'><kbd>space</kbd></span> to continue</p>";
       return html;
